--- a/hackuniversity-linktree.html
+++ b/hackuniversity-linktree.html
@@ -231,6 +231,14 @@
       background: #eef4ff;
       color: #113b83;
     }
+    .club-action.is-off {
+      pointer-events: none;
+      opacity: .42;
+      filter: grayscale(25%);
+      border-style: dashed;
+      background: #f5f7fb;
+      color: #64748b;
+    }
 
     .footer { background: var(--color-primary); color: #fff; padding: 32px 0 48px; margin-top: 24px; }
     .footer-container { max-width: 1200px; margin: 0 auto; padding: 0 20px; }
@@ -325,7 +333,6 @@
       <h1>Hack University Linktree</h1>
       <p>All official club portals in one place. Choose your organization and open the main site directly.</p>
     </header>
-
     <section class="linktree-list" aria-label="Club Linktree">
       <article class="club-card">
         <div class="club-top">
@@ -342,12 +349,16 @@
         <div class="club-actions">
           <a class="club-action" href="https://hackuniversity-directory.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i> LinkedIn</a>
           <a class="club-action" href="https://hackuniversity-directory.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i> IG</a>
+          <a class="club-action" href="https://hackuniversityplatforms.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i> IG Group</a>
+          <a class="club-action" href="https://gdgatfiu-discordserver.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-discord"></i> Discord</a>
+          <a class="club-action" href="https://hackuniversityplatforms.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-users"></i> GroupMe</a>
+          <a class="club-action" href="https://hackuniversity-photos.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-images"></i> Photo Albums</a>
           <a class="club-action" href="https://hackuniversity-directory.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i> GitHub</a>
           <a class="club-action" href="https://hackuniversity-directory.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube"></i> YouTube</a>
-          <a class="club-action" href="https://gdgatfiu-discordserver.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-discord"></i> Discord</a>
           <a class="club-action" href="https://hackuniversity-calendar.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="far fa-calendar-alt"></i> Calendar</a>
           <a class="club-action" href="https://hackuniversity-attendance.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fas fa-clipboard-check"></i> Attendance</a>
           <a class="club-action" href="https://hackuniversity-zoom.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fas fa-video"></i> Zoom</a>
+          <a class="club-action" href="https://codecrunchglobal.vercel.app/hackathons.html" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-trophy"></i> Hackathons</a>
           <a class="club-action" href="https://gdgatfiu.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-globe"></i> Website</a>
         </div>
       </article>
@@ -367,12 +378,16 @@
         <div class="club-actions">
           <a class="club-action" href="https://hackuniversity-directory.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i> LinkedIn</a>
           <a class="club-action" href="https://hackuniversity-directory.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i> IG</a>
+          <a class="club-action" href="https://hackuniversityplatforms.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i> IG Group</a>
+          <a class="club-action" href="https://codecrunchglobal-discordserver.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-discord"></i> Discord</a>
+          <a class="club-action" href="https://hackuniversityplatforms.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-users"></i> GroupMe</a>
+          <a class="club-action" href="https://hackuniversity-photos.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-images"></i> Photo Albums</a>
           <a class="club-action" href="https://hackuniversity-directory.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i> GitHub</a>
           <a class="club-action" href="https://hackuniversity-directory.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube"></i> YouTube</a>
-          <a class="club-action" href="https://codecrunchglobal-discordserver.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-discord"></i> Discord</a>
           <a class="club-action" href="https://hackuniversity-calendar.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="far fa-calendar-alt"></i> Calendar</a>
           <a class="club-action" href="https://hackuniversity-attendance.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fas fa-clipboard-check"></i> Attendance</a>
           <a class="club-action" href="https://hackuniversity-zoom.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fas fa-video"></i> Zoom</a>
+          <a class="club-action" href="https://codecrunchglobal.vercel.app/hackathons.html" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-trophy"></i> Hackathons</a>
           <a class="club-action" href="https://codecrunchglobal.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-globe"></i> Website</a>
         </div>
       </article>
@@ -392,12 +407,16 @@
         <div class="club-actions">
           <a class="club-action" href="https://hackuniversity-directory.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i> LinkedIn</a>
           <a class="club-action" href="https://hackuniversity-directory.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i> IG</a>
+          <a class="club-action" href="https://hackuniversityplatforms.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i> IG Group</a>
+          <a class="club-action" href="https://colorstackatfiu-discordserver.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-discord"></i> Discord</a>
+          <a class="club-action" href="https://hackuniversityplatforms.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-users"></i> GroupMe</a>
+          <a class="club-action" href="https://hackuniversity-photos.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-images"></i> Photo Albums</a>
           <a class="club-action" href="https://hackuniversity-directory.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i> GitHub</a>
           <a class="club-action" href="https://hackuniversity-directory.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube"></i> YouTube</a>
-          <a class="club-action" href="https://colorstackatfiu-discordserver.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-discord"></i> Discord</a>
           <a class="club-action" href="https://hackuniversity-calendar.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="far fa-calendar-alt"></i> Calendar</a>
           <a class="club-action" href="https://hackuniversity-attendance.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fas fa-clipboard-check"></i> Attendance</a>
           <a class="club-action" href="https://hackuniversity-zoom.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fas fa-video"></i> Zoom</a>
+          <a class="club-action" href="https://codecrunchglobal.vercel.app/hackathons.html" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-trophy"></i> Hackathons</a>
           <a class="club-action" href="https://colorstackatfiu.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-globe"></i> Website</a>
         </div>
       </article>
@@ -417,12 +436,16 @@
         <div class="club-actions">
           <a class="club-action" href="https://hackuniversity-directory.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i> LinkedIn</a>
           <a class="club-action" href="https://hackuniversity-directory.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i> IG</a>
+          <a class="club-action" href="https://hackuniversityplatforms.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i> IG Group</a>
+          <a class="club-action" href="https://cahsiatfiu-discordserver.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-discord"></i> Discord</a>
+          <a class="club-action" href="https://hackuniversityplatforms.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-users"></i> GroupMe</a>
+          <a class="club-action" href="https://hackuniversity-photos.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-images"></i> Photo Albums</a>
           <a class="club-action" href="https://hackuniversity-directory.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i> GitHub</a>
           <a class="club-action" href="https://hackuniversity-directory.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube"></i> YouTube</a>
-          <a class="club-action" href="https://cahsiatfiu-discordserver.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-discord"></i> Discord</a>
           <a class="club-action" href="https://hackuniversity-calendar.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="far fa-calendar-alt"></i> Calendar</a>
           <a class="club-action" href="https://hackuniversity-attendance.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fas fa-clipboard-check"></i> Attendance</a>
           <a class="club-action" href="https://hackuniversity-zoom.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fas fa-video"></i> Zoom</a>
+          <a class="club-action" href="https://codecrunchglobal.vercel.app/hackathons.html" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-trophy"></i> Hackathons</a>
           <a class="club-action" href="https://cahsiatfiu.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-globe"></i> Website</a>
         </div>
       </article>
@@ -442,12 +465,16 @@
         <div class="club-actions">
           <a class="club-action" href="https://hackuniversity-directory.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i> LinkedIn</a>
           <a class="club-action" href="https://hackuniversity-directory.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i> IG</a>
+          <a class="club-action" href="https://hackuniversityplatforms.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i> IG Group</a>
+          <a class="club-action" href="https://codecrunchglobal-discordserver.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-discord"></i> Discord</a>
+          <a class="club-action" href="https://hackuniversityplatforms.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-users"></i> GroupMe</a>
+          <a class="club-action" href="https://hackuniversity-photos.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-images"></i> Photo Albums</a>
           <a class="club-action" href="https://hackuniversity-directory.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i> GitHub</a>
           <a class="club-action" href="https://hackuniversity-directory.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube"></i> YouTube</a>
-          <a class="club-action" href="https://codecrunchglobal-discordserver.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fab fa-discord"></i> Discord</a>
           <a class="club-action" href="https://hackuniversity-calendar.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="far fa-calendar-alt"></i> Calendar</a>
           <a class="club-action" href="https://hackuniversity-attendance.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fas fa-clipboard-check"></i> Attendance</a>
           <a class="club-action" href="https://hackuniversity-zoom.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fas fa-video"></i> Zoom</a>
+          <a class="club-action" href="https://codecrunchglobal.vercel.app/hackathons.html" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-trophy"></i> Hackathons</a>
           <a class="club-action" href="https://raspberrypicodecrunch.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-globe"></i> Website</a>
         </div>
       </article>
