--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -596,13 +596,13 @@
 
       <!-- UPDATED: HERO BUTTONS + PHOTO ALBUM -->
       <div class="flex flex-col sm:flex-row items-center justify-center gap-3 mt-7">
-        <a class="btn btn-ghost" href="#" data-link-key="nav.calendar">
+        <a class="btn btn-ghost" href="#" data-link-key="resource.partners">
           <i class="fa-regular fa-compass"></i> Explore Organization Partners
         </a>
 
         <a class="btn btn-light"
            href="#"
-           data-link-key="resource.eboard"
+           data-link-key="resource.AlbumHackUniversity"
            target="_blank"
            rel="noopener noreferrer"
            aria-label="Hack University Photo Album (Google Photos)">
@@ -1060,9 +1060,9 @@
             { key: "hero.partners", href: "#partners", newTab: false },
                 { key: "student.hackerGuide", href: "https://codecrunchglobal.vercel.app/hacks-toolkit.html", newTab: true },
 
+ { key: "resource.AlbumHackUniversity", href: "https://hackuniversity-photos.vercel.app/", newTab: false },
 
-
-
+ { key: "resource.partners", href: "https://codecrunchglobal.vercel.app/hackuniversity.html#partners", newTab: false },
     { key: "resource.gdg", href: "https://gdgatfiu.vercel.app", newTab: true },
     { key: "partner.codeCrunch", href: "https://codecrunchglobal.vercel.app", newTab: true },
     { key: "partner.colorStack", href: "https://colorstackatfiu.vercel.app", newTab: true },
