--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -658,6 +658,9 @@
             <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="resource.membershipHackuniversity" target="_blank" rel="noopener noreferrer">
               <i class="fa-solid fa-rocket"></i> Update Your Membership Hack University (13+ | OneStop Form)
             </a>
+                                    <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="resource.SubscribeGooglecalendar" target="_blank" rel="noopener noreferrer">
+              <i class="fa-regular fa-calendar"></i> Add to Google Calendar 
+            </a>
                         <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="nav.calendar" target="_blank" rel="noopener noreferrer">
               <i class="fa-regular fa-calendar"></i> Events Calendar
             </a>
@@ -1060,9 +1063,9 @@
             { key: "hero.partners", href: "#partners", newTab: false },
                 { key: "student.hackerGuide", href: "https://codecrunchglobal.vercel.app/hacks-toolkit.html", newTab: true },
 
- { key: "resource.AlbumHackUniversity", href: "https://hackuniversity-photos.vercel.app/", newTab: false },
-
- { key: "resource.partners", href: "https://codecrunchglobal.vercel.app/hackuniversity.html#partners", newTab: false },
+    { key: "resource.AlbumHackUniversity", href: "https://hackuniversity-photos.vercel.app/", newTab: false },
+    { key: "resource.SubscribeGooglecalendar", href: "https://calendar.google.com/calendar/u/0?cid=ODRjNGQ2NTA0NTA1OTdjNTkyZTc0ZThmNWZlODUxMzAxZjYwYTkyZjMwYmI1OTM2ODA5OTk3ODFkZmFjYWIxMkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t", newTab: true },
+    { key: "resource.partners", href: "https://codecrunchglobal.vercel.app/hackuniversity.html#partners", newTab: false },
     { key: "resource.gdg", href: "https://gdgatfiu.vercel.app", newTab: true },
     { key: "partner.codeCrunch", href: "https://codecrunchglobal.vercel.app", newTab: true },
     { key: "partner.colorStack", href: "https://colorstackatfiu.vercel.app", newTab: true },
