--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -515,15 +515,15 @@
 
     <!-- Links -->
     <div class="nav-links" id="huNavLinks">
-      <a data-link-key="resource.gdg" class="nav-link" href="#">Partners</a>
-      <a data-link-key="partner.codeCrunchHome" class="nav-link" href="#">Mission</a>
-      <a data-link-key="partner.colorStackHome"
+      <a data-link-key="resource.partners" class="nav-link" href="#">Partners</a>
+      <a data-link-key="resource.mission" class="nav-link" href="#">Mission</a>
+      <a data-link-key="resource.hackathons"
         class="nav-link"
         href="#"
         target="_blank"
         rel="noopener noreferrer"
       >Hackathons</a>
-      <a data-link-key="partner.cahsiHome"
+      <a data-link-key="resource.hackuniversityCalendar"
         class="nav-link"
         href="#"
         target="_blank"
@@ -1063,6 +1063,7 @@
             { key: "hero.partners", href: "#partners", newTab: false },
                 { key: "student.hackerGuide", href: "https://codecrunchglobal.vercel.app/hacks-toolkit.html", newTab: true },
 
+
     { key: "resource.AlbumHackUniversity", href: "https://hackuniversity-photos.vercel.app/", newTab: false },
     { key: "resource.SubscribeGooglecalendar", href: "https://calendar.google.com/calendar/u/0?cid=ODRjNGQ2NTA0NTA1OTdjNTkyZTc0ZThmNWZlODUxMzAxZjYwYTkyZjMwYmI1OTM2ODA5OTk3ODFkZmFjYWIxMkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t", newTab: true },
     { key: "resource.partners", href: "https://codecrunchglobal.vercel.app/hackuniversity.html#partners", newTab: false },
@@ -1078,6 +1079,7 @@
     { key: "resource.toolkitHackerGuide", href: "https://codecrunchglobal.vercel.app/hacks-toolkit.html", newTab: true },
     { key: "resource.hackuniversityCalendar", href: "https://codecrunchglobal.vercel.app/hackuniversity-calendar.html", newTab: true },
 
+    { key: "resource.hackathons", href: "https://hackuniversity-onestopform.vercel.app/", newTab: true },
     { key: "resource.membershipHackuniversity", href: "https://hackuniversity-onestopform.vercel.app/", newTab: true },
     { key: "resource.studentLogin", href: "https://hackuniversity-onestop.vercel.app/", newTab: true },
 
