--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -1079,7 +1079,7 @@
     { key: "resource.toolkitHackerGuide", href: "https://codecrunchglobal.vercel.app/hacks-toolkit.html", newTab: true },
     { key: "resource.hackuniversityCalendar", href: "https://codecrunchglobal.vercel.app/hackuniversity-calendar.html", newTab: true },
 
-    { key: "resource.hackathons", href: "https://hackuniversity-onestopform.vercel.app/", newTab: true },
+    { key: "resource.hackathons", href: "https://codecrunchglobal.vercel.app/hackathons.html", newTab: true },
     { key: "resource.membershipHackuniversity", href: "https://hackuniversity-onestopform.vercel.app/", newTab: true },
     { key: "resource.studentLogin", href: "https://hackuniversity-onestop.vercel.app/", newTab: true },
 
