--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -659,7 +659,7 @@
               <i class="fa-solid fa-rocket"></i> Update Your Membership Hack University (13+ | OneStop Form)
             </a>
                                     <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="resource.SubscribeGooglecalendar" target="_blank" rel="noopener noreferrer">
-              <i class="fa-regular fa-calendar"></i> Add to Google Calendar 
+              <i class="fa-regular fa-calendar"></i> Add Google Event Calendar 
             </a>
                         <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="nav.calendar" target="_blank" rel="noopener noreferrer">
               <i class="fa-regular fa-calendar"></i> Events Calendar
