--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -709,7 +709,7 @@
         <div class="divider"></div>
 
         <a class="btn btn-primary-soft w-full"
-           data-link-key="resource.gdg"
+           data-link-key="resource.companyPortal"
            href="#">
           <i class="fa-solid fa-building"></i> Go to Company Portal
         </a>
@@ -725,7 +725,7 @@
         <div class="divider"></div>
 
         <a class="btn btn-primary-soft w-full"
-           data-link-key="student.discord"
+           data-link-key="resource.volunteerPortal"
            href="#">
           <i class="fa-solid fa-user-tie"></i> Go to Volunteer Portal
         </a>
@@ -1082,6 +1082,8 @@
     { key: "resource.hackathons", href: "https://codecrunchglobal.vercel.app/hackathons.html", newTab: true },
     { key: "resource.membershipHackuniversity", href: "https://hackuniversity-onestopform.vercel.app/", newTab: true },
     { key: "resource.studentLogin", href: "https://hackuniversity-onestop.vercel.app/", newTab: true },
+        { key: "resource.companyPortal", href: "https://codecrunchglobal.vercel.app/hackuniversitydonate.html", newTab: true },
+            { key: "resource.volunteerPortal", href: "https://codecrunchglobal.vercel.app/hackathonvolunteer-wiki.html", newTab: true },
 
 
     { key: "hero.photos", href: "https://hackuniversity-photos.vercel.app/", newTab: true },
