--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -727,35 +727,37 @@
             <i class="fa-solid fa-chevron-down portal-caret" aria-hidden="true"></i>
           </summary>
           <div class="portal-menu">
+            <p class="portal-menu-label">Get Started</p>
             <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="resource.studentLogin">
               <i class="fa-solid fa-right-to-bracket"></i> Student Login (13+ | OneStop Form)
             </a>
-            
             <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="resource.membershipHackuniversity" target="_blank" rel="noopener noreferrer">
-              <i class="fa-solid fa-rocket"></i> Membership Hack University (13+ | OneStop Form)
+              <i class="fa-solid fa-rocket"></i> Join Membership Hack University (13+ | OneStop Form)
+            </a>
+            <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="resource.membershipHackuniversity" target="_blank" rel="noopener noreferrer">
+              <i class="fa-solid fa-pen-to-square"></i> Update Membership / Registration
             </a>
 
-            <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="resource.membershipHackuniversity" target="_blank" rel="noopener noreferrer">
-              <i class="fa-solid fa-rocket"></i> Update Your Membership Hack University (13+ | OneStop Form)
+            <p class="portal-menu-label">Events Access</p>
+            <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="resource.SubscribeGooglecalendar" target="_blank" rel="noopener noreferrer">
+              <i class="fa-regular fa-calendar"></i> Add Google Event Calendar
             </a>
-                                    <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="resource.SubscribeGooglecalendar" target="_blank" rel="noopener noreferrer">
-              <i class="fa-regular fa-calendar"></i> Add Google Event Calendar 
-            </a>
-                        <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="nav.calendar" target="_blank" rel="noopener noreferrer">
+            <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="nav.calendar" target="_blank" rel="noopener noreferrer">
               <i class="fa-regular fa-calendar"></i> Events Calendar
             </a>
-                        <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="student.zoom" target="_blank" rel="noopener noreferrer">
+            <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="student.zoom" target="_blank" rel="noopener noreferrer">
               <i class="fa-solid fa-video"></i> Join Event Zoom Meetings
             </a>
- 
+
+            <p class="portal-menu-label">Hackathons</p>
             <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="nav.hackathons" target="_blank" rel="noopener noreferrer">
               <i class="fa-solid fa-trophy"></i> Sign Up for Hackathons (16+)
             </a>
-
             <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="resource.membershipHackuniversity" target="_blank" rel="noopener noreferrer">
-              <i class="fa-solid fa-rocket"></i> Update Your Hackathons registration (16+)
+              <i class="fa-solid fa-pen-to-square"></i> Update Your Hackathon Registration (16+)
             </a>
 
+            <p class="portal-menu-label">Resources & Certificates</p>
             <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="resource.toolkitHackerGuide" target="_blank" rel="noopener noreferrer">
               <i class="fa-solid fa-book-open"></i> Open Hacker Guide
             </a>
@@ -765,13 +767,15 @@
             <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="student.MembershipCertificates" target="_blank" rel="noopener noreferrer">
               <i class="fa-solid fa-certificate"></i> Membership Certificates
             </a>
+
+            <p class="portal-menu-label">Community & Leadership</p>
             <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="student.discord" target="_blank" rel="noopener noreferrer">
               <i class="fa-brands fa-discord"></i> Join Discord (OneStop Required)
             </a>
             <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="student.hackuniversityplatforms" target="_blank" rel="noopener noreferrer">
               <i class="fa-solid fa-user-group"></i> GroupMe / Instagram Group Chat
             </a>
-                        <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="resource.membershipHackuniversity"" target="_blank" rel="noopener noreferrer">
+            <a class="btn btn-ghost w-full portal-link" href="#" data-link-key="resource.membershipHackuniversity" target="_blank" rel="noopener noreferrer">
               <i class="fa-solid fa-people-group"></i> Apply for the Student Executive Board
             </a>
 
